    "added")
  - rk.XML.embed() now also accepts objects of class rk.plug.comp as
    components
  - rk.XML.connect() now allows objects of class rk.plug.comp to be used as clients
    and <external> nodes to be used as the "set" modifier for that client, and can
    therefore be used to connect properties from embedded plugins
added:
  - new parameters "mode", "placement", "active" and "id.name" in
    rk.XML.preview()
  - new parameter "preview" in rk.JS.doc() to force adding a preview()
    function
  - rk.plugin.component() and rk.plugin.skeleton() now support "preview" in
    both the "js" option and the "scan" option
  - new options "preview" and "level" in rk.JS.saveobj()
  - id() gained the new attribute "guess.modifier" to toggle the new default
    for <frame> nodes in JS (see above)
  - new parameter "namespace" in rk.XML.embed() to result in
    "namespace::component", takes character strings, <about> nodes and pluginmap XML trees and
    is not yet covered by plugin2script()

changes in version 0.08-1 (2015-12-17)
fixed:
  - attribute "max_precision" in <spinbox> was misspelled
  - rk.XML.connect() still handled modifiers for "governor" wrong if it
    wasn't a XiMpLe node
  - also fixed how rk.XML.convert() and rk.XML.switch() were handling
    modifier checking
  - rk.XML.dependencies() didn't know about min/max versions of pluginmaps
    (fixed in rk.XML.about() as well)
  - some fixes to the skeleton GUI and demo script
  - prevent internal function indent() from losing it over negative values
  - indentation of rk.paste.JS.graph() was incorrect
  - pasting comments via rk.paste.JS() gained an extra space for subsequent
    lines
  - the "i18n" attribute in lists e.g. for rk.XML.radio() didn't really work
  - improved indetation for rk.JS.oset objects
  - rk.XML.varslot() and rk.XML.valueslot() didn't correctly add sources if
    they were character strings (which is valid)
  - R.comment() didn't correctly paste indentation levels > 2
added: