@@ -8,14 +8,13 @@ Depends:
 Suggests:
     testthat
 Enhances: rkward
-Description: Provides functions to create plugin skeletons and XML
-    structures for RKWard.
+Description: Provides functions to create plugin skeletons and XML structures
+    for RKWard.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyLoad: yes
 URL: https://rkward.kde.org
-Authors@R: c(person(given="m.eik", family="michalke",
-        email="meik.michalke@hhu.de", role=c("aut", "cre", "cph")))
+Authors@R: c(person(given="m.eik", family="michalke", email="meik.michalke@hhu.de", role=c("aut", "cre", "cph")))
 Version: 0.08-2
 Date: 2016-03-10
 RoxygenNote: 5.0.1
@@ -47,6 +46,7 @@ Collate:
     'rk-internal.R'
     'rk.JS.array.R'
     'rk.JS.header.R'
+    'rk.JS.method.R'
     'rk.JS.options.R'
     'rk.JS.optionset.R'
     'rk.JS.saveobj.R'
