@@ -14,6 +14,7 @@ export(qp)
 export(rk.JS.array)
 export(rk.JS.doc)
 export(rk.JS.header)
+export(rk.JS.method)
 export(rk.JS.options)
 export(rk.JS.optionset)
 export(rk.JS.saveobj)
